Updated Readme and bumped version number

--- a/library.properties
+++ b/library.properties
@@ -5,7 +5,7 @@ maintainer=Simon Bluett <hello@chillibasket.com>
 sentence=Read, write, add and remove settings from a configuration file on a SD card.
 paragraph=SDConfigFile can read simple configuration files stored on a SD card, parsing the parameter names and their values. Retreival of all common Arduino variable types are supported. The library also supports adding, modifying and deleting settings contained in the configuration file.
 category=Data Storage
-url=https://github.com/chillibasket/
+url=https://github.com/chillibasket/sd-config-file
 architectures=*
 depends=SdFat
 includes=SDConfigFile.h
